// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RelativeLinkComponent should render correct markup 1`] = `
<a
  className="euiLink euiLink--primary "
  href="/opbeans-node/errors?foo=bar&foo2=bar2"
  onClick={[Function]}
>
  Go to Discover
</a>
`;

exports[`UnconnectedKibanaLink should include existing _g values in link href 1`] = `
<EuiLink
  color="primary"
  href="myBasePath/app/kibana#/discover?_a=(interval:auto,query:(language:lucene,query:'context.service.name:\\"myServiceName\\" AND error.grouping_key:\\"myGroupId\\"'),sort:('@timestamp':desc))&_g=(refreshInterval:(pause:!t,value:0),time:(from:now-7d,mode:relative,to:now-1d))"
  type="button"
>
  Go to Discover
</EuiLink>
`;

exports[`UnconnectedKibanaLink should include existing _g values in link href 2`] = `
<EuiLink
  color="primary"
  href="myBasePath/app/kibana#/discover?_a=(interval:auto,query:(language:lucene,query:'context.service.name:\\"myServiceName\\" AND error.grouping_key:\\"myGroupId\\"'),sort:('@timestamp':desc))&_g=H@whatever"
  type="button"
>
  Go to Discover
</EuiLink>
`;

exports[`UnconnectedKibanaLink should render correct markup 1`] = `
<EuiLink
  color="primary"
  href="myBasePath/app/kibana#/discover?_a=(interval:auto,query:(language:lucene,query:'context.service.name:\\"myServiceName\\" AND error.grouping_key:\\"myGroupId\\"'),sort:('@timestamp':desc))&_g=(time:(from:now-24h,mode:quick,to:now))"
  type="button"
>
  Go to Discover
</EuiLink>
`;

exports[`ViewMLJob should render component 1`] = `
<Component
  hash="/timeseriesexplorer"
  location={
    Object {
      "search": "",
    }
  }
  pathname="/app/ml"
  query={
    Object {
      "_a": null,
      "_g": Object {
        "ml": Object {
          "jobIds": Array [
            "myServiceName-myTransactionType-high_mean_response_time",
          ],
        },
      },
    }
  }
>
  View Job
</Component>
`;
